# ohm

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  configure.ac  configure.in  git-version-gen  ohm.conf.in  ohm.conf.in.orig  ohm.pc.in
aegis/: Makefile.am  cgroups.credentials  fmradio.credentials  ohmd.credentials  telephony.credentials
debian/: changelog  control  control.in  gen-nokia-plugin-list  gen-plugin-list  ohm-dev.docs  ohm-dev.install  ohm-nokia-plugins.install  ohm-plugin-core.install  ohm-plugin-core0.install  ohm-plugins-legacy.install  ohm-plugins.install  ohm.docs  ohm.init.in  ohm.install  rules
docs/: Makefile.am  dbus-interface.xml  docbook.css  faq.xml  index.html  index.xml.in  introduction.xml  plugins.xml  usecases.txt
docs/plugins/nokia/playback/: state_machine.fig
docs/reference/: Makefile.am
docs/reference/libohm/: Makefile.am  libohm-docs.sgml
docs/reference/ohm-plugin/: Makefile.am  ohm-plugin-decl-list.txt  ohm-plugin-docs.sgml  ohm-plugin-sections.txt
etc/: Makefile.am  backlight  modules.ini  ohmd  prevent  require  suggest
etc/plugins/: Makefile.am
examples/policy/: policy.dres
examples/policy/prolog/: audio.pl  devconfig.pl  hwconfig.pl  interface.pl  policy.pl  profile.pl
fedora/: Makefile  ohm.spec.in
include/: Makefile.am
include/ohm/: ohm-dbus.h  ohm-fact.h  ohm-factstore.h  ohm-plugin-dbus.h  ohm-plugin-debug.h  ohm-plugin-log.h  ohm-plugin.h
initscript/: Makefile.am
initscript/Debian/: ohmd
initscript/Gentoo/: Makefile.am  ohmd
initscript/Maemo/: Makefile.am
initscript/MeeGo/: Makefile.am  ohmd.debug  ohmd.service  org.freedesktop.ohm.service
initscript/RedHat/: Makefile.am  ohmd
initscript/Slackware/: Makefile.am  rc.ohmd
libfactstore/: Makefile.am  ohm-factstore.c  test-fact.c  test-fact.h
libidletime/: Makefile.am  libidletime.c  libidletime.h
libohm/: .gitignore  Makefile.am  libohm-marshal.c  libohm-marshal.h  libohm-marshal.list  libohm-test.c  libohm.c  libohm.h
meego/: Makefile  ohm.spec.in
ohmd/: .gitignore  Makefile.am  libohmfact.pc.in  libohmplugin.pc.in  massif-ohm.sh  ohm-common.h  ohm-conf.c  ohm-conf.h  ohm-confobj.c  ohm-confobj.h  ohm-dbus-internal.h  ohm-dbus-keystore.xml  ohm-dbus-manager.xml  ohm-dbus.c  ohm-dbus.h  ohm-debug.c  ohm-debug.h  ohm-fact.c  ohm-fact.h  ohm-factstore.c  ohm-keystore.c  ohm-keystore.h  ohm-main.c  ohm-manager.c  ohm-manager.h  ohm-marshal.list  ohm-module.c  ohm-module.h  ohm-plugin-debug.h  ohm-plugin-internal.h  ohm-plugin-log.c  ohm-plugin.c  ohm-plugin.h  ohm-test.c  run-ohm.sh  test-fact.c  valgrind-ohm.sh
plugins/: Makefile.am  ohm-plugin-battery.c
plugins/acadapter/: Makefile.am  acadapter  ohm-plugin-acadapter.c
plugins/backlight/: Makefile.am  backlight  ohm-plugin-backlight.c
plugins/battery/: Makefile.am  battery  ohm-plugin-battery.c
plugins/dpms/: Makefile.am  ohm-plugin-dpms.c
plugins/glue/: Makefile.am
plugins/glue/acadapter/: Makefile.am  ohm-plugin-acadapter.c
plugins/glue/backlight/: Makefile.am  backlight  ohm-plugin-backlight.c
plugins/glue/battery/: Makefile.am  battery  ohm-plugin-battery.c
plugins/glue/buttons/: Makefile.am  buttons.ini  ohm-plugin-buttons.c
plugins/glue/dpms/: Makefile.am  dpms.ini  ohm-plugin-dpms.c
plugins/glue/headset/: Makefile.am  headset.ini  ohm-plugin-headset.c
plugins/glue/idle/: Makefile.am  README  idle.ini  ohm-plugin-idle.c
plugins/glue/powerstatus/: Makefile.am  ohm-plugin-powerstatus.c  powerstatus
plugins/glue/timeremaining/: Makefile.am  ohm-plugin-timeremaining.c
plugins/glue/xorg/: Makefile.am  ohm-plugin-xorg.c  xorg.ini
plugins/glue/xrandr/: Makefile.am  ohm-plugin-xrandr.c  xrandr.ini
plugins/idle/: Makefile.am  idle  ohm-plugin-idle.c
plugins/nokia/: Makefile.am
plugins/nokia/accessories/: Makefile.am  accessories.c
plugins/nokia/audioroute/: Makefile.am  audioroute.c
plugins/nokia/console/: console.c
plugins/nokia/cscall/: Makefile.am  cscall.c
plugins/nokia/dres/: Makefile.am  console.c  console.h  dres.c  factstore.c  factstore.h  resolver.c
plugins/nokia/hal/: Makefile.am  hal-internal.c  hal.c  hal.h
plugins/nokia/libplayback/: Makefile.am  libplayback.c  libplayback.h
plugins/nokia/playback/: Makefile.am  client.c  client.h  dbusif.c  dbusif.h  dresif.c  fsif.c  fsif.h  pbreq.c  pbreq.h  playback.c  playback.h  sm.c  sm.h
plugins/nokia/policy/: Makefile.am  policy.c
plugins/nokia/profile/: Makefile.am  profile.c  profile.h
plugins/nokia/profiles/: Makefile.am  profiles.c
plugins/nokia/prolog/: Makefile.am  prolog.c
plugins/nokia/signaling/: Makefile.am  signaling-internal.c  signaling.c  signaling.h
plugins/nokia/signaling/tests/: Makefile.am  check_signaling.c  ep.py
plugins/policy/: Makefile.am
plugins/policy/display/: Makefile.am  display.ini  ohm-plugin-display.c
plugins/policy/suspend/: Makefile.am  ohm-plugin-suspend.c  suspend.ini
plugins/policy/timeouts/: Makefile.am  timeouts.c  timeouts.ini
plugins/powerstatus/: Makefile.am  ohm-plugin-powerstatus.c
plugins/timeremaining/: Makefile.am  ohm-plugin-timeremaining.c  timeremaining
po/: .gitignore  POTFILES.in  en_GB.po
rpm/: ohm-rpmlintrc  ohm.changes  ohm.spec  ohm.yaml
scripts/: ohm-aegis-config.sh  ohm-dbus-config.sh
session/: .gitignore  Makefile.am  ohm-inhibit-test.c  session-daemon.c
tests/: Makefile.am  test-fact.c
tools/: .gitignore  Makefile.am  libohm-test.c  lsohm.c  ohm-get-key.c  ohm-set-key.c
